crates/cli/tests/snapshots/update__update_tests__update_reports_migration_failure_marker_after_health_failure.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\nPV application: update failed; rolled back to 0.2.5\n",
    stderr: "error: database migration failed after update: migration 7 (resource_port_roles) failed\n",
}
