crates/cli/tests/snapshots/update__update_tests__update_reports_reexec_failure_without_rolling_back_updated_app.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\nPrivileged helper: current 1.0.0 (protocol 1)\nPV application: updated 0.2.5 -> 0.3.0\nDaemon restarted and healthy\n",
    stderr: "error: PV application update succeeded, but Managed Resource update continuation failed to start: exec failed. Run `pv update` again to update Managed Resources.\n",
}
