crates/cli/tests/snapshots/update__update_tests__update_reports_rollback_daemon_restart_failure_after_restore.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\nPV application: update failed; restored 0.2.5\n",
    stderr: "error: PV application update failed (daemon did not become healthy after update); previous release was restored, but daemon restart after rollback failed: daemon protocol error: rollback daemon boot failed. Run `pv daemon:restart` or `pv setup`.\n",
}
