crates/cli/tests/snapshots/update__update_tests__update_reports_rollback_symlink_restore_failure.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\nPV application: update failed; rollback failed\n",
    stderr: "error: PV application update failed (daemon did not become healthy after update); rollback failed: application: PV app release `0.2.5` is missing at \"<pv-home>/bin/releases/0.2.5/pv\"\n",
}
