crates/cli/tests/snapshots/update__update_tests__update_restores_previous_helper_and_reports_cleanup_warning.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\nPV application: update failed; rolled back to 0.2.5\n",
    stderr: "warning: installed privileged helper but could not remove lifecycle transaction files: retained rollback metadata\nerror: daemon did not become healthy after update\n",
}
