crates/cli/tests/snapshots/update__update_tests__update_retains_helper_candidate_when_restoring_helper_during_app_rollback_fails.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\nPV application: update failed; rollback failed\n",
    stderr: "error: PV application update failed (daemon did not become healthy after update); rollback failed: privileged helper: PV privileged helper installation failed: restoring the registered helper failed; retained helper rollback candidate at <pv-home>/downloads/pv-helper-rollback-<id>.tmp\n",
}
