crates/cli/tests/snapshots/update__update_tests__update_rolls_back_when_daemon_health_fails_after_activation.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\nPV application: update failed; rolled back to 0.2.0\n",
    stderr: "error: daemon did not become healthy after update\n",
}
