crates/cli/tests/snapshots/update__update_tests__update_warns_when_pruning_old_app_release_fails.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "PV update\nPrivileged helper: current 1.0.0 (protocol 1)\nPV application: updated 0.2.4 -> 0.3.0\nDaemon restarted and healthy\n",
    stderr: "warning: failed to prune old PV app releases: filesystem error at \"<pv-home>/bin/releases/0.0.8\": Not a directory (os error 20)\n",
}
